crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N811_N811.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N811 Constant `STILL_BAD` imported as non-constant `stillBad`
 --> N811.py:2:8
  |
1 | import mod.BAD_ALLOWED as badAllowed
2 | import mod.STILL_BAD as stillBad
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | from mod import BAD_ALLOWED as badAllowed
  |

N811 Constant `STILL_BAD` imported as non-constant `stillBad`
 --> N811.py:5:17
  |
4 | from mod import BAD_ALLOWED as badAllowed
5 | from mod import STILL_BAD as stillBad
  |                 ^^^^^^^^^^^^^^^^^^^^^
