crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N812_N812.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N812 Lowercase `stillbad` imported as non-lowercase `stillBad`
 --> N812.py:2:8
  |
2 | import mod.stillbad as stillBad
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
  |

N812 Lowercase `stillbad` imported as non-lowercase `StillBad`
 --> N812.py:5:17
  |
5 | from mod import stillbad as StillBad
  |                 ^^^^^^^^^^^^^^^^^^^^
  |
