crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N813_N813.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N813 Camelcase `stillBad` imported as lowercase `stillbad`
 --> N813.py:2:8
  |
2 | import mod.stillBad as stillbad
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
  |

N813 Camelcase `StillBad` imported as lowercase `stillbad`
 --> N813.py:5:17
  |
5 | from mod import StillBad as stillbad
  |                 ^^^^^^^^^^^^^^^^^^^^
  |

N813 Camelcase `StillBad` imported as lowercase `still_bad`
 --> N813.py:8:17
  |
8 | from mod import StillBad as still_bad
  |                 ^^^^^^^^^^^^^^^^^^^^^
  |
