crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N814_N814.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N814 Camelcase `StillBad` imported as constant `STILLBAD`
 --> N814.py:2:8
  |
2 | import mod.StillBad as STILLBAD
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
  |

N814 Camelcase `StillBad` imported as constant `STILLBAD`
 --> N814.py:5:17
  |
5 | from mod import StillBad as STILLBAD
  |                 ^^^^^^^^^^^^^^^^^^^^
  |

N814 Camelcase `StillBad` imported as constant `STILL_BAD`
 --> N814.py:8:17
  |
8 | from mod import StillBad as STILL_BAD
  |                 ^^^^^^^^^^^^^^^^^^^^^
  |
