crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N815_N815.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N815 Variable `stillBad` in class scope should not be mixedCase
 --> N815.py:3:5
  |
1 | class C:
2 |     badAllowed = 0
3 |     stillBad = 0
  |     ^^^^^^^^
4 |
5 |     _badAllowed = 0
  |

N815 Variable `_stillBad` in class scope should not be mixedCase
 --> N815.py:6:5
  |
5 |     _badAllowed = 0
6 |     _stillBad = 0
  |     ^^^^^^^^^
7 |
8 |     bad_Allowed = 0
  |

N815 Variable `still_Bad` in class scope should not be mixedCase
  --> N815.py:9:5
   |
 8 |     bad_Allowed = 0
 9 |     still_Bad = 0
   |     ^^^^^^^^^
10 |
11 | class D(TypedDict):
   |

N815 Variable `stillBad` in class scope should not be mixedCase
  --> N815.py:13:5
   |
11 | class D(TypedDict):
12 |     badAllowed: bool
13 |     stillBad: bool
   |     ^^^^^^^^
14 |
15 |     _badAllowed: list
   |

N815 Variable `_stillBad` in class scope should not be mixedCase
  --> N815.py:16:5
   |
15 |     _badAllowed: list
16 |     _stillBad: list
   |     ^^^^^^^^^
17 |
18 |     bad_Allowed: set
   |

N815 Variable `still_Bad` in class scope should not be mixedCase
  --> N815.py:19:5
   |
18 |     bad_Allowed: set
19 |     still_Bad: set
   |     ^^^^^^^^^
