crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N816_N816.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N816 Variable `stillBad` in global scope should not be mixedCase
 --> N816.py:2:1
  |
2 | stillBad = 0
  | ^^^^^^^^
  |

N816 Variable `_stillBad` in global scope should not be mixedCase
 --> N816.py:5:1
  |
5 | _stillBad = 0
  | ^^^^^^^^^
  |

N816 Variable `still_Bad` in global scope should not be mixedCase
 --> N816.py:8:1
  |
8 | still_Bad = 0
  | ^^^^^^^^^
  |
