crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N817_N817.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N817 CamelCase `StillBad` imported as acronym `SB`
 --> N817.py:2:8
  |
2 | import mod.StillBad as SB
  |        ^^^^^^^^^^^^^^^^^^
  |

N817 CamelCase `StillBad` imported as acronym `SB`
 --> N817.py:5:17
  |
5 | from mod import StillBad as SB
  |                 ^^^^^^^^^^^^^^
  |
