crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_N818_N818.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N818 Exception name `StillBad` should be named with an Error suffix
 --> N818.py:4:7
  |
4 | class StillBad(Exception):
  |       ^^^^^^^^
  |

N818 Exception name `StillBad` should be named with an Error suffix
  --> N818.py:10:7
   |
10 | class StillBad(AnotherError):
   |       ^^^^^^^^
   |
