crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_camelcase-imported-as-constant_N814.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N814 Camelcase `StillBad` imported as constant `STILLBAD`
 --> N814.py:2:8
  |
1 | import mod.BadAllowed as BADALLOWED
2 | import mod.StillBad as STILLBAD
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | from mod import BadAllowed as BADALLOWED
  |

N814 Camelcase `StillBad` imported as constant `STILLBAD`
 --> N814.py:5:17
  |
4 | from mod import BadAllowed as BADALLOWED
5 | from mod import StillBad as STILLBAD
  |                 ^^^^^^^^^^^^^^^^^^^^
6 |
7 | from mod import BadAllowed as BAD_ALLOWED
  |

N814 Camelcase `StillBad` imported as constant `STILL_BAD`
 --> N814.py:8:17
  |
7 | from mod import BadAllowed as BAD_ALLOWED
8 | from mod import StillBad as STILL_BAD
  |                 ^^^^^^^^^^^^^^^^^^^^^
