crates/ruff_linter/src/rules/pep8_naming/snapshots/ruff_linter__rules__pep8_naming__tests__ignore_names_camelcase-imported-as-lowercase_N813.py.snap
---
source: crates/ruff_linter/src/rules/pep8_naming/mod.rs
---
N813 Camelcase `stillBad` imported as lowercase `stillbad`
 --> N813.py:2:8
  |
1 | import mod.BadAllowed as badallowed
2 | import mod.stillBad as stillbad
  |        ^^^^^^^^^^^^^^^^^^^^^^^^
3 |
4 | from mod import BadAllowed as badallowed
  |

N813 Camelcase `StillBad` imported as lowercase `stillbad`
 --> N813.py:5:17
  |
4 | from mod import BadAllowed as badallowed
5 | from mod import StillBad as stillbad
  |                 ^^^^^^^^^^^^^^^^^^^^
6 |
7 | from mod import BadAllowed as bad_allowed
  |

N813 Camelcase `StillBad` imported as lowercase `still_bad`
 --> N813.py:8:17
  |
7 | from mod import BadAllowed as bad_allowed
8 | from mod import StillBad as still_bad
  |                 ^^^^^^^^^^^^^^^^^^^^^
